--- a/index.html
+++ b/index.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varotra Charbon</title>
+    <title>AutoFinity Marketplace</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Varotra Charbon</h1>
+        <h1>AutoFinity</h1>
         <nav>
             <ul>
-                <li><a href="#">Fandraisana</a></li>
-                <li><a href="#">Tsena</a></li>
-                <li><a href="#">Fandoavana</a></li>
-                <li><a href="#">Mpitantana</a></li>
+                <li><a href="dashboard.html">Tableau de bord</a></li>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">Paiement</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="marketplace">
-            <h2>Tsena & Entana</h2>
-            <div id="product-list">
-                <div class="product">🛒 Charbon Premium - 10kg</div>
-                <div class="product">💰 Charbon Standard - 5kg</div>
-                <div class="product">🚚 Livraison Express</div>
-            </div>
-        </section>
-    </main>
+    <section class="marketplace">
+        <h2>🌟 Liste des services & marketplace</h2>
+        <div class="product">🛒 Dropshipping</div>
+        <div class="product">💰 Crowdfunding</div>
+        <div class="product">🎮 Gaming</div>
+        <div class="product">🔗 Affiliate Marketing</div>
+    </section>
 
     <footer>
-        <p>&copy; 2025 Varotra Charbon - Reserved</p>
+        <p>&copy; 2025 AutoFinity - Tous droits réservés</p>
     </footer>
 
 </body>
